--- a/slides.css
+++ b/slides.css
@@ -35,7 +35,7 @@ body {
 
 .glide__slides {
   position: absolute;
-  width: 65%;
+  width: 60%;
   margin-left: 5%;
   margin-right: 5%;
   list-style: none;
@@ -67,7 +67,7 @@ body {
 
 .glide__slide {
   clip-path: polygon(140% -60px, 140% 90%, 50% 100%, -60% 90%, -60px -60px);
-  width: 72%;
+  width: 60%;
   height: 100%;
   white-space: initial;
   user-select: none;
@@ -87,7 +87,7 @@ body {
   width: 86%;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
+  padding: 5px;
 }
 
 .glide__slide>div {
@@ -118,7 +118,7 @@ body {
 }
 
 #slide-1 h2 {
-  color: #a7a9ac;
+  color: #007fc7;
 }
 
 #slide-2 h2 {
